[package]
name = "crab_share"
author = "lukas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
rust-s3 = { version = "0.33", features = ["blocking"] }
bytesize = "1.1"

zip = "0.6"
walkdir = "2.3"

