[package]
name = "crab_share"
authors = ["Lukas Sabatschus <lukas@sabatschus.de>", "MayNiklas"]
license = "MIT OR Apache-2.0"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusty-s3 = { version = "0.4" }
reqwest = { version = "0.11" }
sha2 = { version = "0.10.7", features = ["asm-aarch64"] }
bytesize = "1.1"

tokio = { version = "1.33", features = ["rt", "macros", "rt-multi-thread"] }

zip = "0.6"
walkdir = "2.3"
flume = "0.10.14"
indicatif = "0.17.6"
fs_extra = "1.3.0"
ulid = "1.0.0"

[profile.release]
# lto = "fat"
debug = true
panic = "abort"
