[package]
name = "crab_share"
authors = ["Emma Sabatschus <emma@sabatschus.de>", "MayNiklas"]
license = "MIT OR Apache-2.0"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusty-s3 = { version = "0.8" }
reqwest = { version = "0.13" }
sha2 = { version = "0.10", features = ["asm-aarch64"] }
bytesize = "2.3"

tokio = { version = "1.49", features = ["rt", "macros", "rt-multi-thread"] }

zip = "8.1"
walkdir = "2.5"
flume = "0.12"
indicatif = "0.18"
fs_extra = "1.3"
ulid = "1.2"
qrcodegen = "1.8"

[profile.release]
# lto = "fat"
debug = true
panic = "abort"
